--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3"
 
 services:
   sonarqube:
-    build: ./7.4
+    image: sonarqube:7.4-community
+    container_name: sonarqube
     ports:
       - "9000:9000"
     networks:
@@ -10,11 +11,11 @@ services:
     environment:
       - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
     volumes:
-      - ./volumes/sonarqube/config:/opt/sonarqube/conf
-      - ./volumes/sonarqube/data:/opt/sonarqube/data
-      - ./volumes/sonarqube/extensions:/opt/sonarqube/extensions
-      - ./volumes/sonarqube/plugins:/opt/sonarqube/lib/bundled-plugins
-
+      - sonarqube_conf:/opt/sonarqube/conf
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+        
   db:
     image: postgres:11
     networks:
@@ -28,3 +29,9 @@ services:
 networks:
   sonarnet:
     driver: bridge
+
+volumes:
+  sonarqube_conf:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_bundled-plugins:
